<resources>
    <string name="app_name">AppTienda</string>

    <!-- LOGIN ACTIVITY -->
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Sign In</string>
    <string name="registerButtonText">Register</string>
    <string name="emailError">Invalid Email</string>
    <string name="emailExist">Email Exists</string>
    <string name="passwordError">Empty Password</string>
    <string name="titleWelcome">Welcome!</string>

    <!-- REGISTER ACTIVITY -->
    <string name="title">Register for Shop App</string>
    <string name="userNameText">Name</string>
    <string name="lastNameText">Lastname</string>
    <string name="passwordText">Password</string>
    <string name="emailText">Email</string>
    <string name="genderText">Gender</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="addressText">Address</string>
    <string name="confirmButton">Confirm</string>

    <!-- PRODUCT DETAIL ACTIVITY -->
    <string name="buyButton">Buy!</string>
    <string name="paymentTitle">Payment Method</string>
    <string name="cashText">Cash</string>
    <string name="transferText">Transfer</string>
    <string name="stockTitle">Stock:</string>

    <!-- CREATE PRODUCT  ACTIVITY -->
    <string name="productName">Product Name</string>
    <string name="productPrice">Price</string>
    <string name="productDescription">Description</string>
    <string name="productStock">Stock</string>
    <string name="createProduct">Create Product!</string>
    <string name="titleActivity">Product Creation</string>


    <!-- SUMMARY ORDER ACTIVITY -->
    <string name="titleOrder">Order Created!</string>
    <string name="transferData">Data for Transfer</string>
    <string name="instructions">Instructions</string>


    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_products">Products</string>
    <string name="navigation_drawer_my_profile">My Profile</string>
    <string name="navigation_drawer_shopping_history">Shopping History</string>
    <string name="navigation_drawer_delete_user">Delete User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ACTION BAR -->
    <string name="action_bar_home">Products</string>
    <string name="action_bar_products_title">Products</string>
    <string name="action_bar_my_profile_title">My Profile</string>
    <string name="action_bar_shopping_history_title">Shopping History</string>
    <string name="action_bar_users">Users </string>




</resources>
