<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:id="@+id/titleTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:gravity="center_horizontal"
            android:text="@string/titleWelcome"
            android:textSize="30dp"
            android:textStyle="bold"
            android:maxWidth="200dp"  />

    <EditText
            android:id="@+id/emailEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            android:maxWidth="200dp"  />

    <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"/>

    <Button
            android:id="@+id/goToRegisterFormButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/loginButton"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="100dp"
            android:text="@string/registerButtonText" app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/goToRegisterFormButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="100dp"
            android:text="@string/loginButtonText"/>



</android.support.constraint.ConstraintLayout>