<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateProductActivity">

    <TextView
            android:id="@+id/productTitleCreationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/titleActivity"
            android:textSize="20sp"
            android:textStyle="bold"/>



    <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/productTitleCreationTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/productName"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/productNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/productPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/productPrice"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/productPriceTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"  />



    <TextView
            android:id="@+id/descriptionTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/priceEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/productDescription"
            android:textSize="14sp"
            android:textStyle="bold"/>


    <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>


    <TextView
            android:id="@+id/productStockTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/productStock"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/stockEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/productStockTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="number"  />




    <ImageButton
            android:id="@+id/takePictureImageButton"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/stockEditText"
            app:layout_constraintBottom_toTopOf="@+id/confirmProductCreationButton"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/android_camera1"/>

    <Button
            android:id="@+id/confirmProductCreationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/createProduct"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>






</android.support.constraint.ConstraintLayout>